# RIFTCast

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
RIFTCast/: README.md  pyproject.toml
RIFTCast/src/riftcast/: __init__.py
RIFTCast/src/riftcast/_C/: CMakeLists.txt
RIFTCast/src/riftcast/_C/include/riftcast/: BenchmarkLogger.h  CameraData.h  DatasetImporter.h  GeometryModule.h  InpaintingModule.h  RenderModule.h  riftcastkernels.h
RIFTCast/src/riftcast/_C/include/riftcast/protocol/: riftcastprotocol.h
RIFTCast/src/riftcast/_C/python/: riftcast.cpp
RIFTCast/src/riftcast/_C/shader/: depth_pass.fs  depth_pass.vs  num_cameras.glsl  primitive_pass.fs  primitive_pass.vs  rift.fs  rift.vs
RIFTCast/src/riftcast/_C/src/: BenchmarkLogger.cpp  DatasetImporter.cpp  GeometryModule.cpp  InpaintingModule.cpp  RenderModule.cpp  riftcastkernels.cu
RIFTCast/src/riftcast/_C/src/protocol/: riftcastprotocol.cpp
scripts/: compile_inpainting.py
src/: CMakeLists.txt
src/RIFTCast_app/: source.cpp
src/RIFTCast_client/: CMakeLists.txt  source.cpp
src/RIFTCast_exporter/: CMakeLists.txt  source.cpp
src/RIFTCast_server/: CMakeLists.txt  source.cpp
